tests/ui/macros/same-sequence-span.stderr
error: `$x:expr` may be followed by `$y:tt`, which is not allowed for `expr` fragments
  --> $DIR/same-sequence-span.rs:14:18
   |
LL |     (1 $x:expr $($y:tt,)*
   |                  ^^^^^ not allowed after `expr` fragments
   |
   = note: allowed there are: `=>`, `,` or `;`

error: `$x:expr` may be followed by `=`, which is not allowed for `expr` fragments
  --> $DIR/same-sequence-span.rs:15:18
   |
LL |                $(= $z:tt)*
   |                  ^ not allowed after `expr` fragments
   |
   = note: allowed there are: `=>`, `,` or `;`

error: `$x:expr` may be followed by `$y:tt`, which is not allowed for `expr` fragments
  --> $DIR/same-sequence-span.rs:19:1
   |
LL |   proc_macro_sequence::make_foo!();
   |   ^-------------------------------
   |   |
   |  _in this macro invocation
   | |
LL | |
LL | |
LL | | fn main() {}
   | |_________________________________^ not allowed after `expr` fragments
   |
   = note: allowed there are: `=>`, `,` or `;`
   = note: this error originates in the macro `proc_macro_sequence::make_foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$x:expr` may be followed by `=`, which is not allowed for `expr` fragments
  --> $DIR/same-sequence-span.rs:19:1
   |
LL | proc_macro_sequence::make_foo!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not allowed after `expr` fragments
   |
   = note: allowed there are: `=>`, `,` or `;`
   = note: this error originates in the macro `proc_macro_sequence::make_foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

